# senji

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  Senji — Upload File.shortcut  config.yaml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml
senji-gateway/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
senji-gateway/.serena/: project.yml
senji-gateway/app/: config.py  errors.py  logging.py  main.py
senji-gateway/app/api/: health.py
senji-gateway/app/middleware/: auth.py  error_handler.py
senji-gateway/app/models/: schemas.py
senji-gateway/app/routes/: convert.py  ingest.py  query.py
senji-gateway/app/services/: asset_downloader.py  docling_client.py  embedding_service.py  fetcher.py  frontmatter.py  index_service.py  job_queue.py  media.py  ollama_client.py  readability_client.py  trafilatura_service.py  vault_writer.py  (+2 more)
senji-gateway/docs/: MEMORY_BUDGET.md
senji-gateway/scripts/: deploy.sh  init_vault.sh  smoke_tests.sh
senji-gateway/static/: app.js  index.html  style.css
senji-gateway/tests/: conftest.py  test_asset_downloader.py  test_auth.py  test_convert_file.py  test_convert_html.py  test_convert_url.py  test_e2e.py  test_e2e_integration.py  test_embedding_service.py  test_errors.py  test_frontmatter.py  test_health.py  test_index_service.py  test_index_service_integration.py  test_ingest.py  test_ingest_file_image.py  test_ingest_file_pdf.py  test_ingest_url.py  test_job_queue.py  test_logging.py  test_media.py  test_ollama_client.py  test_query_rag.py  test_schemas.py  test_slugify.py  test_vault_writer.py  test_wiki_service.py
(+65 files in other folders)
