[project]
name = "pkm-clipper"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"shortcuts/clip.py" = ["E501"]          # AppleScript literals can't be shortened
"shortcuts/tests/helpers.py" = ["E501"] # PDF binary literal

[tool.pytest.ini_options]
testpaths = ["shortcuts/tests"]
pythonpath = ["shortcuts", "shortcuts/tests"]
